DFY-6: upe-pycore image

--- a/py-core/pyproject.toml
+++ b/py-core/pyproject.toml
@@ -10,6 +10,11 @@ dependencies = ["black",
       "pydocstyle",
       "pytest",
       "pytest-asyncio",
+      "pytest-html",
+      "ruff",
+      "bandit",
+      "sphinx",
+      "furo",
       "coverage"]
 
 [build-system]
